--- a/dockercompose.yml
+++ b/dockercompose.yml
@@ -9,7 +9,7 @@ services:
       WORDPRESS_DB_PASSWORD: hodhod0114496
       WORDPRESS_DB_NAME: hodhod
     ports:
-      - "80:80"
+      - "8080:80"
 
   wordpress2:
     image: wordpress
@@ -34,4 +34,4 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./nginx/:/etc/nginx/conf.d/
+      - /home/ubuntu/nginx/:/etc/nginx/conf.d/
