--- a/dockercompose.yml
+++ b/dockercompose.yml
@@ -1,4 +1,3 @@
-
 services:
   wordpress1:
     image: wordpress
@@ -10,6 +9,8 @@ services:
       WORDPRESS_DB_NAME: hodhod
     ports:
       - "8080:80"
+    volumes:
+      - /var/www/html/wp-content/:/var/www/html/wp-content/
 
   wordpress2:
     image: wordpress
@@ -22,7 +23,7 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - /var/www/html/:/var/www/html/
+      - /var/www/html/wp-content/:/var/www/html/wp-content/
 
     depends_on:
       wordpress1:
@@ -34,4 +35,4 @@ services:
     ports:
       - 80:80
     volumes:
-      - /home/ubuntu/nginx/:/etc/nginx/conf.d/
+      - ./nginx/:/etc/nginx/conf.d/
