--- a/dockercompose.yml
+++ b/dockercompose.yml
@@ -1,6 +1,7 @@
 services:
   wordpress1:
     image: wordpress
+    restart: on-failure
     container_name: wordpress1
     environment:
       WORDPRESS_DB_HOST: 10.0.133.166
@@ -14,6 +15,7 @@ services:
 
   wordpress2:
     image: wordpress
+    restart: on-failure
     container_name: wordpress2
     environment:
       WORDPRESS_DB_HOST: 10.0.133.166
@@ -34,5 +36,6 @@ services:
       context: .
     ports:
       - 80:80
+    restart: on-failure
     volumes:
       - ./nginx/:/etc/nginx/conf.d/
