--- a/dockercompose.yml
+++ b/dockercompose.yml
@@ -7,7 +7,7 @@ services:
       WORDPRESS_DB_HOST: 10.0.133.166
       WORDPRESS_DB_USER: hodhod
       WORDPRESS_DB_PASSWORD: hodhod0114496
-      WORDPRESS_DB_NAME: hodhod
+      WORDPRESS_DB_NAME: wordpress
     ports:
       - "8080:80"
     volumes:
@@ -21,7 +21,7 @@ services:
       WORDPRESS_DB_HOST: 10.0.133.166
       WORDPRESS_DB_USER: hodhod
       WORDPRESS_DB_PASSWORD: hodhod0114496
-      WORDPRESS_DB_NAME: hodhod
+      WORDPRESS_DB_NAME: wordpress
     ports:
       - "8081:80"
     volumes:
